--- a/apps/web/views/layout.erb
+++ b/apps/web/views/layout.erb
@@ -2,11 +2,25 @@
 <html>
 <head>
   <title>evercam.io</title>
+
   <link rel='stylesheet' href='//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css'>
+  <link rel='stylesheet' href='/css/evercam.bootstrap.css'>
+
+  <script src='//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js'></script>
+  <script src='//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js'></script>
 </head>
 <body>
   <div class='container'>
+
+    <% flash.each do |key,msg| %>
+      <div class='alert alert-dismissable alert-<%= key %>'>
+        <button type='button' class='close' data-dismiss='alert' aria-hidden='true'>&times;</button>
+        <%= msg %>
+      </div>
+    <% end %>
+
     <%= yield %>
+
   </div>
 </body>
 
