added 10px margin to top of main div in layout.erb

--- a/apps/web/views/layout.erb
+++ b/apps/web/views/layout.erb
@@ -10,7 +10,7 @@
   <script src='//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js'></script>
 </head>
 <body>
-  <div class='container'>
+  <div id='main' class='container'>
 
     <% flash.each do |key,msg| %>
       <div class='alert alert-dismissable alert-<%= key %>'>
