added custom title building in layout.erb

--- a/apps/web/views/layout.erb
+++ b/apps/web/views/layout.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>evercam.io</title>
+  <title><%= [@title, 'evercam.io'].compact.join(' · ') %></title>
 
   <link rel='stylesheet' href='//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css'>
   <link rel='stylesheet' href='/css/evercam.bootstrap.css'>
