--- a/app/web/views/oauth2/authorize.erb
+++ b/app/web/views/oauth2/authorize.erb
@@ -5,7 +5,7 @@
   #{app} has requested access to the following resources
 </h2>
 <div>
-  &nbsp;
+  #{resources}
 </div>
 <div>
   <form method='POST'>
