--- a/app/web/views/login.erb
+++ b/app/web/views/login.erb
@@ -1,18 +1,22 @@
-<h1><%= @title = 'Sign in' %></h1>
+<div class='col-sm-6 col-sm-offset-3'>
+  <h1><%= @title = 'Sign In' %></h1>
 
-<form role='form', method='POST'>
+  <form role='form', method='POST'>
 
-  <div class='form-group'>
-    <label for='username'>Username or Email</label>
-    <input class='form-control' name='username' type='text' placeholder='Username or Email' required>
-  </div>
+    <div class='form-group'>
+      <label for='username'>Username or Email</label>
+      <input class='form-control' name='username' type='text' placeholder='Username or Email' required>
+    </div>
 
-  <div class='form-group'>
-    <label for='password'>Password</label>
-    <input class='form-control' name='password' type='password' placeholder='Password' required>
-  </div>
+    <div class='form-group'>
+      <label for='password'>Password</label>
+      <input class='form-control' name='password' type='password' placeholder='Password' required>
+    </div>
 
-  <input class='btn btn-primary' type='submit' value='Sign in'>
+    <button type='submit' class='btn btn-success pull-right'>
+      Sign In
+    </button>
 
-</form>
+  </form>
+</div>
 
