--- a/app/web/views/login.erb
+++ b/app/web/views/login.erb
@@ -13,7 +13,7 @@
       <input class='form-control' name='password' type='password' placeholder='Password' required>
     </div>
 
-    <button type='submit' class='btn btn-success pull-right'>
+    <button type='submit' class='btn btn-primary pull-right'>
       Sign In
     </button>
 
