--- a/app/web/public/css/template.bootstrap.css
+++ b/app/web/public/css/template.bootstrap.css
@@ -1,17 +1,27 @@
 @import url(//fonts.googleapis.com/css?family=Pacifico);
 @import url(//fonts.googleapis.com/css?family=Roboto:400,500,700);
 
-*, a:hover, a:focus, a:active {
-  outline: none
+html, body {
+  height: 100%;
 }
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background: #4d4d4d;
+}
+
+*, a:hover, a:focus, a:active {
+  outline: none
+}
+
+
+#wrapper {
+  position: relative;
+  min-height: 100.1%;
 }
 
 .main {
-  background: #fff
+  padding: 15px 0px;
+  background: #fff;
 }
 
 .main ul {
@@ -19,7 +29,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color: #4d4d4d
+  color: #4d4d4d;
 }
 
 h1 {
@@ -297,12 +307,9 @@ a.btn:focus {
   outline: none
 }
 
-.header-block {
-  border-bottom: #f1f1f1 1px solid
-}
-
 header {
-  margin-bottom: 10px;
+  border-bottom: #f1f1f1 1px solid;
+  background: #fff;
 }
 
 header h1 {
@@ -515,7 +522,6 @@ header #logo {
 
 #content {
   padding-bottom: 60px;
-  border-bottom: #ededed 1px solid;
 }
 
 .block-1 {
@@ -1147,10 +1153,15 @@ aside {
 }
 
 footer {
-  padding: 15px 0 12px 0;
+  color: #fff;
+  padding: 20px 0 9px 0;
   font-size: 13px;
   line-height: 22px;
-  color: #fff;
+  background: #4d4d4d;
+  position: absolute;
+  border-top: #ededed 1px solid;
+  width: 100%;
+  bottom: 0px;
 }
 
 footer span {
@@ -1159,17 +1170,13 @@ footer span {
 }
 
 footer span a {
-  color: #fff
+  color: #fff;
+  margin: 0px 5px;
 }
 
 footer span a:hover {
   text-decoration: underline;
   color: #fff;
-}
-
-footer span strong {
-  font-weight: normal;
-  color: #838383;
 }
 
 .social-icons {
