--- a/app/web/views/layout.erb
+++ b/app/web/views/layout.erb
@@ -24,7 +24,7 @@
   <header id='header'>
     <div class='container'>
       <div class='row'>
-        <div class='col-sm-12 col-md-12 col-lg-12 '>
+        <div class='col-sm-12'>
           <div class='header-block clearfix'>
             <h1>
               <a class='navbar-brand' href='index.html'>
@@ -32,7 +32,7 @@
               </a>
             </h1>
             <ul class='nav tm-navbar navbar-nav sf-menu'>
-              <li><a href='/'>Home</a></li>
+              <li class='hidden-sm'><a href='/'>Home</a></li>
               <li><a href='#'>Connect</a></li>
               <li><a href='/docs'>Develop</a></li>
               <li><a href='#'>Marketplace</a></li>
