adding error handling which preserves request url in browser

--- a/app/web/views/layout.erb
+++ b/app/web/views/layout.erb
@@ -28,7 +28,7 @@
           <div class='header-block clearfix'>
             <h1>
               <a class='navbar-brand' href='index.html'>
-                <img id='logo' src='img/logo.svg'>
+                <img id='logo' src='/img/logo.svg'>
               </a>
             </h1>
             <ul class='nav tm-navbar navbar-nav sf-menu'>
