--- a/app/web/public/css/template.bootstrap.css
+++ b/app/web/public/css/template.bootstrap.css
@@ -1293,6 +1293,21 @@ footer span a:hover {
   margin: 30px 0 0 0
 }
 
+.form-group .form-inline:after {
+  display: table;
+  line-height: 0;
+  content: '';
+}
+
+.form-group .form-inline,
+.form-group .form-inline, .form-group {
+  padding-left: 0;
+}
+
+.form-group .form-inline, .form-group:last-child {
+  padding-right: 0;
+}
+
 @media (min-width: 1220px) {
 
   .container {
