refactored the structure of the erb templates

--- a/app/web/views/docs/v1/snapshots.erb
+++ b/app/web/views/docs/v1/snapshots.erb
@@ -1,4 +1,5 @@
-<pre><code class='json'>
+<pre>
+<code class='json'>
 {
   "uris":{
     "external": "http://mystic-mountains-1471.evr.cm',
@@ -16,4 +17,5 @@
     }
   }
 }
-</code></pre>
+</code>
+</pre>
