--- a/app/web/public/css/template.bootstrap.css
+++ b/app/web/public/css/template.bootstrap.css
@@ -83,6 +83,17 @@ p {
   margin: 0 0 20px 0
 }
 
+pre {
+  border: 0px;
+  background: #fff;
+}
+
+pre code {
+  padding: 10px 20px !important;
+  background: #f5f5f5 !important;
+  border-radius: 4px;
+}
+
 .alert-error {
   color: #b94a48;
   background-color: #f2dede;
