--- a/app/web/views/docs/api/v1/snapshots.erb
+++ b/app/web/views/docs/api/v1/snapshots.erb
@@ -1,8 +1,7 @@
 <pre>
-<code class='json'>
-{
+<code class='json'>{
   "uris":{
-    "external": "http://mystic-mountains-1471.evr.cm',
+    "external": "http://mystic-mountains-1471.evr.cm",
     "internal": "http://192.168.1.123"
   },
   "formats": {
@@ -17,5 +16,4 @@
     }
   }
 }
-</code>
-</pre>
+</code></pre>
