--- a/app/web/views/docs/api/v1/snapshots.erb
+++ b/app/web/views/docs/api/v1/snapshots.erb
@@ -1,3 +1,19 @@
+<h1>Snapshots</h1>
+<p>
+The snapshots section of the API covers all operations which can be affected on the video channel of a stream. Snapshot operations always revolve around the reading or storing a single image (a single frame).
+</p>
+<h4>GET /v1/streams/{stream}/snapshots</h4>
+<p>
+This operation returns all data required to connect to the stream device, authenticate where nessessary, and retrieve images in whatever formats are currently available. Public streams can be accessed without providing any authentication. Private streams require authentication via any <a href='/docs/authentication#methods'>supported method</a> and prior authorization to view it.
+</p>
+<p>
+A typical cURL command to GET the data for any particular private stream would look like this:
+</p>
+<pre><code class='bash'>GET https://api.evercam.io/v1/streams/{stream}/snapshots \
+  -H 'Authorization: Bearer {token}' </code></pre>
+<p>
+Assuming your authentication information is verified and you are authorized to view the stream, the server will respond with an <span class='label label-success'>OK 200</span> status code and the stream snapshot data using the following JSON format:
+</p>
 <pre>
 <code class='json'>{
   "uris":{
