added outline documentation for the authorization methods

--- a/app/web/views/layouts/docs.erb
+++ b/app/web/views/layouts/docs.erb
@@ -24,10 +24,19 @@
             </li>
             <li>
             <ul>
-              <li>
-                <a href='/docs/api/v1/snapshots'>Snapshots</a>
-              </li>
+              <li><a href='/docs/api/v1/authentication'>Authentication</a></li>
+              <li><a href='/docs/api/v1/snapshots'>Snapshots</a></li>
             </ul>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href=''>evercam.js</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href=''>evercam.rb</a>
             </li>
           </ul>
         </div>
