--- a/app/web/views/layouts/_footer.erb
+++ b/app/web/views/layouts/_footer.erb
@@ -21,7 +21,8 @@
         </ul>
         <span>
           <a href='/about'>About Us</a>
-          <a href='/privacy'>Privacy &amp; Terms</a>
+          <a href='/terms'>Terms</a>
+          <a href='/privacy'>Privacy</a>
           <a href='/jobs'>Jobs</a>
         </span>
       </div>
