--- a/app/web/views/layouts/_header.erb
+++ b/app/web/views/layouts/_header.erb
@@ -4,7 +4,7 @@
       <div class='col-sm-12'>
         <div class='header-block clearfix'>
           <h1>
-            <a class='navbar-brand' href='index.html'>
+            <a class='navbar-brand' href='/'>
               <img id='logo' src='/img/logo.svg'>
             </a>
           </h1>
