--- a/app/web/views/about.erb
+++ b/app/web/views/about.erb
@@ -68,14 +68,14 @@
       <img class="avatar" src="https://secure.gravatar.com/avatar/e0b1154b3f230e4451535b2e35c615e7?s=200">
       <h4>Azhar Malik</h4>
       <h5>Hacker</h5>
-      <p>The hardest working programmer in Pakistan</p>
+      <p>The hardest working hacker in Pakistan</p>
     </li>
 
     <li>
       <img class="avatar" src="https://secure.gravatar.com/avatar/bc5816bd84db9de699f207423d55db18?s=200">
       <h4>Shakeel Anjum</h4>
       <h5>Hacker</h5>
-      <p>Malaria Survivor & gentle soul</p>
+      <p>Malaria survivor and gentle soul</p>
     </li>
   </ul>
 </div>
