updated markup to about page

--- a/app/web/views/about.erb
+++ b/app/web/views/about.erb
@@ -26,7 +26,7 @@
       <img class="avatar" src="https://secure.gravatar.com/avatar/d9ded0900d332ca6789f315cdaa1958b?s=200">
       <h4>Paddy Byrne</h4>
       <h5>Designer</h5>
-      <p>Knows a good font when he sees one</p>
+      <p>Wants a desk that doesn't wobble</p>
     </li>
 
     <li>
