--- a/app/web/views/docs/api/v1/snapshots.erb
+++ b/app/web/views/docs/api/v1/snapshots.erb
@@ -14,8 +14,7 @@ A typical cURL command to GET the data for any particular private stream would l
 <p>
 Assuming your authentication information is verified and you are authorized to view the stream, the server will respond with an <span class='label label-success'>OK 200</span> status code and the stream snapshot data using the following JSON format:
 </p>
-<pre>
-<code class='json'>{
+<pre><code class='json'>{
   "uris":{
     "external": "http://mystic-mountains-1471.evr.cm",
     "internal": "http://192.168.1.123"
