--- a/app/web/views/layouts/_head.erb
+++ b/app/web/views/layouts/_head.erb
@@ -1,8 +1,8 @@
 <title><%= [@title, 'evercam.io'].compact.join(' · ') %></title>
 <meta name='viewport' content='width=device-width, initial-scale=1.0'>
 
-<link rel='icon' href='img/favicon.ico' type='image/x-icon'>
-<link rel='shortcut icon' href='img/favicon.ico' type='image/x-icon'>
+<link rel='icon' href='/img/favicon.ico' type='image/x-icon'>
+<link rel='shortcut icon' href='/img/favicon.ico' type='image/x-icon'>
 
 <meta name='description' content='Your description'>
 <meta name='keywords' content='Your keywords'>
