updated markup to about page

--- a/app/web/views/about.erb
+++ b/app/web/views/about.erb
@@ -8,18 +8,18 @@
       <p>Former Christmas tree salesman</p>
     </li>
 
+	<li>
+      <img class="avatar" src="https://secure.gravatar.com/avatar/96103be7633629bc42dc24653ff28690?s=200">
+      <h4>Garrett Heaver</h4>
+      <h5>Hacker</h5>
+      <p>Would prefer to work for SpaceX</p>
+    </li>
+	
     <li>
       <img class="avatar" src="http://1.gravatar.com/avatar/b4fd03e586651eef82a903fa3b2718bd?s=200">
       <h4>Marco Herbst</h4>
       <h5>Hustler</h5>
       <p>Failed piano player</p>
-    </li>
-
-    <li>
-      <img class="avatar" src="https://secure.gravatar.com/avatar/96103be7633629bc42dc24653ff28690?s=200">
-      <h4>Garrett Heaver</h4>
-      <h5>Hacker</h5>
-      <p>Would prefer to work for SpaceX</p>
     </li>
 
     <li>
@@ -76,6 +76,13 @@
       <h4>Shakeel Anjum</h4>
       <h5>Hacker</h5>
       <p>Malaria survivor and gentle soul</p>
+    </li>
+	
+	<li>
+      <img class="avatar" src="https://secure.gravatar.com/avatar/52b3d7390b4f8d13b0eacbd66111aa89?s=200">
+      <h4>Tomasz Jama</h4>
+      <h5>Hacker</h5>
+      <p>Dreams in code</p>
     </li>
   </ul>
 </div>
