--- a/app/web/views/about.erb
+++ b/app/web/views/about.erb
@@ -26,7 +26,7 @@
       <img class="avatar" src="https://secure.gravatar.com/avatar/d9ded0900d332ca6789f315cdaa1958b?s=200">
       <h4>Paddy Byrne</h4>
       <h5>Designer</h5>
-      <p>Wants a desk that doesn't wobble</p>
+      <p>Wants a desk that doesn&apos;t wobble</p>
     </li>
 
     <li>
@@ -78,12 +78,7 @@
       <p>Malaria survivor and gentle soul</p>
     </li>
 	
-	<li>
-      <img class="avatar" src="https://secure.gravatar.com/avatar/52b3d7390b4f8d13b0eacbd66111aa89?s=200">
-      <h4>Tomasz Jama</h4>
-      <h5>Hacker</h5>
-      <p>Dreams in code</p>
-    </li>
+
   </ul>
 </div>
 
