updated device to merge configs with firmware defaults

--- a/app/web/views/docs/api/v1/vendors.erb
+++ b/app/web/views/docs/api/v1/vendors.erb
@@ -46,7 +46,7 @@ As this is a public section of the API no authentication or authorization detail
     "id": "ubiquiti",
     "name": "Ubiquiti Networks",
     "known_macs": ["04:18:D6"],
-    "models": [{
+    "firmwares": [{
       "name": "*",
       "auth": {
         "basic": {
