little change in about page

--- a/app/web/views/about.erb
+++ b/app/web/views/about.erb
@@ -33,7 +33,7 @@
     <img class="avatar" src="https://secure.gravatar.com/avatar/e029df6e2669b71cfc28dff9061e66b9?s=200">
     <h4>Liuting Du</h4>
     <h5>Hacker</h5>
-    <p>Beijing&apos;s candidate for Rose of Tralee</p>
+    <p>Dunhuang&apos;s candidate for Rose of Tralee</p>
     </li>
 
     <li>
