--- a/app/web/views/about.erb
+++ b/app/web/views/about.erb
@@ -1,90 +1,109 @@
-<h1 class="center">Meet The Team</h1>
-<div class="team">
-  <ul>
-    <li>
-    <img class="avatar" src="http://1.gravatar.com/avatar/5fc9d9bb491dc7604e966937c51c9d66?s=200">
-    <h4>Vinnie Quinn</h4>
-    <h5>Hustler</h5>
-    <p>Former Christmas tree salesman</p>
-    </li>
+	<h1 class="center indent-1">Meet The Team</h1>
+			<div class="container">
+				<div class="row block-2">
+					<div class="member">
+						<div class="col-sm-4">
+							<img style="border-radius:50%;" src="http://1.gravatar.com/avatar/5fc9d9bb491dc7604e966937c51c9d66?s=220">
+							<h4>Vinnie Quinn</h4>
+							<h5>Hustler</h5>
+							<p>Former Christmas tree salesman</p>
+						</div>
+					</div>
+					<div class="member">
+						<div class="col-sm-4">
+							<img style="border-radius: 50%;" src="https://secure.gravatar.com/avatar/96103be7633629bc42dc24653ff28690?s=220">
+							<h4>Garrett Heaver</h4>
+							<h5>Hacker</h5>
+							<p>Would prefer to work for SpaceX</p>
+						</div>
+					</div>		
+					<div class="member">
+						<div class="col-sm-4">
+							<img style="border-radius:50%" src="http://1.gravatar.com/avatar/b4fd03e586651eef82a903fa3b2718bd?s=220">
+							<h4>Marco Herbst</h4>
+							<h5>Hustler</h5>
+							<p>Failed piano player</p>
+						</div>
+					</div>
+				</div>
+				<div class="row block-2">
+					<div class="member">
+						<div class="col-sm-4">
+							<img style="border-radius: 50%;" src="https://secure.gravatar.com/avatar/d9ded0900d332ca6789f315cdaa1958b?s=220">
+							<h4>Paddy Byrne</h4>
+							<h5>Designer</h5>
+							<p>Wants a desk that doesn&apos;t wobble</p>
+						</div>
+					</div>
+					<div class="member">
+						<div class="col-sm-4">
+							<img style="border-radius: 50%;" src="https://secure.gravatar.com/avatar/e029df6e2669b71cfc28dff9061e66b9?s=220">
+							<h4>Liuting Du</h4>
+							<h5>Hacker</h5>
+							<p>Beijing&apos;s candidate for Rose of Tralee</p>
+						</div>
+					</div>
+					<div class="member">
+						<div class="col-sm-4">
+							<img style="border-radius: 50%;" src="https://secure.gravatar.com/avatar/c263360d8bbeec33d510e9acd4c11ab0?s=220">
+							<h4>Lisa Craddock</h4>
+							<h5>Mission Controller</h5>
+							<p>World champion hip hop dancer</p>
+						</div>
+					</div>
+				</div> 
 
-    <li>
-    <img class="avatar" src="https://secure.gravatar.com/avatar/96103be7633629bc42dc24653ff28690?s=200">
-    <h4>Garrett Heaver</h4>
-    <h5>Hacker</h5>
-    <p>Would prefer to work for SpaceX</p>
-    </li>
-
-    <li>
-    <img class="avatar" src="http://1.gravatar.com/avatar/b4fd03e586651eef82a903fa3b2718bd?s=200">
-    <h4>Marco Herbst</h4>
-    <h5>Hustler</h5>
-    <p>Failed piano player</p>
-    </li>
-
-    <li>
-    <img class="avatar" src="https://secure.gravatar.com/avatar/d9ded0900d332ca6789f315cdaa1958b?s=200">
-    <h4>Paddy Byrne</h4>
-    <h5>Designer</h5>
-    <p>Wants a desk that doesn&apos;t wobble</p>
-    </li>
-
-    <li>
-    <img class="avatar" src="https://secure.gravatar.com/avatar/e029df6e2669b71cfc28dff9061e66b9?s=200">
-    <h4>Liuting Du</h4>
-    <h5>Hacker</h5>
-    <p>Dunhuang&apos;s candidate for Rose of Tralee</p>
-    </li>
-
-    <li>
-    <img class="avatar" src="https://secure.gravatar.com/avatar/c263360d8bbeec33d510e9acd4c11ab0?s=200">
-    <h4>Lisa Craddock</h4>
-    <h5>Mission Controller</h5>
-    <p>World champion hip hop dancer</p>
-    </li>
-
-    <li>
-    <img class="avatar" src="https://secure.gravatar.com/avatar/f264f6540152ad362bbcb3e60d413765?s=200">
-    <h4>Vinnie O&apos;Farrell</h4>
-    <h5>Engineer</h5>
-    <p>Johnny Five meets Cable Guy</p>
-    </li>
-
-    <li>
-    <img class="avatar" src="https://secure.gravatar.com/avatar/cc024f0ae73608a3d00e77cd54373c82?s=200">
-    <h4>Ronan Byrne</h4>
-    <h5>Intern Developer</h5>
-    <p>Big Javascript book sitting on his desk</p>
-    </li>
-
-    <li>
-    <img class="avatar" src="https://secure.gravatar.com/avatar/a96b36058b2f0e1f6f9966f7930f97f6?s=200">
-    <h4>Daniel Caffrey</h4>
-    <h5>Hacker</h5>
-    <p>Asks to be fired on a daily basis</p>
-    </li>
-
-    <li>
-    <img class="avatar" src="https://secure.gravatar.com/avatar/e0b1154b3f230e4451535b2e35c615e7?s=200">
-    <h4>Azhar Malik</h4>
-    <h5>Hacker</h5>
-    <p>Hardest working programmer in Pakistan</p>
-    </li>
-
-    <li>
-    <img class="avatar" src="https://secure.gravatar.com/avatar/bc5816bd84db9de699f207423d55db18?s=200">
-    <h4>Shakeel Anjum</h4>
-    <h5>Hacker</h5>
-    <p>Malaria survivor and gentle soul</p>
-    </li>
-
-    <li>
-    <img class="avatar" src="https://secure.gravatar.com/avatar/f9d00d8b4490efed402f29184fbe25db?s=200">
-    <h4>Tomasz Jama</h4>
-    <h5>Hacker</h5>
-    <p>Dreams in code</p>
-    </li>
-
-  </ul>
-</div>
-
+				<div class="row block-2">
+					<div class="member">
+						<div class="col-sm-4">
+							  <img class="avatar" src="https://secure.gravatar.com/avatar/f264f6540152ad362bbcb3e60d413765?s=220">
+							  <h4>Vinnie O&apos;Farrell</h4>
+							  <h5>Engineer</h5>
+							  <p>Johnny Five meets Cable Guy</p>
+						</div>
+					</div>
+					<div class="member">
+						<div class="col-sm-4">
+							  <img class="avatar" src="https://secure.gravatar.com/avatar/cc024f0ae73608a3d00e77cd54373c82?s=220">
+							  <h4>Ronan Byrne</h4>
+							  <h5>Intern Developer</h5>
+							  <p>Big Javascript book sitting on his desk</p>
+						</div>
+					</div>
+					<div class="member">
+						<div class="col-sm-4">
+							  <img class="avatar" src="https://secure.gravatar.com/avatar/a96b36058b2f0e1f6f9966f7930f97f6?s=220">
+							  <h4>Daniel Caffrey</h4>
+							  <h5>Hacker</h5>
+							  <p>Asks to be fired on a daily basis</p>
+						</div>
+					</div>
+				</div> 				
+				
+				<div class="row block-2">
+					<div class="member">
+						<div class="col-sm-4">
+							  <img class="avatar" src="https://secure.gravatar.com/avatar/e0b1154b3f230e4451535b2e35c615e7?s=220">
+							  <h4>Azhar Malik</h4>
+							  <h5>Hacker</h5>
+							  <p>Hardest working programmer in Pakistan</p>
+						</div>
+					</div>
+					<div class="member">
+						<div class="col-sm-4">
+							  <img class="avatar" src="https://secure.gravatar.com/avatar/bc5816bd84db9de699f207423d55db18?s=220">
+							  <h4>Shakeel Anjum</h4>
+							  <h5>Hacker</h5>
+							  <p>Malaria Survivor & gentle soul</p>
+						</div>
+					</div>
+					<div class="member">
+						<div class="col-sm-4">
+							  <img class="avatar" src="https://secure.gravatar.com/avatar/f9d00d8b4490efed402f29184fbe25db?s=220">
+							  <h4>Tomasz Jama</h4>
+							  <h5>Hacker</h5>
+							  <p>Dreams in code</p>
+						</div>
+					</div>
+				</div> 	
+			</div>	
