--- a/app/web/views/layouts/docs.erb
+++ b/app/web/views/layouts/docs.erb
@@ -26,6 +26,7 @@
               <li><a href='/docs/api/v1/authentication'>Authentication</a></li>
               <li><a href='/docs/api/v1/snapshots'>Snapshots</a></li>
               <li><a href='/docs/api/v1/vendors'>Vendors</a></li>
+              <li><a href='/docs/api/v1/users'>Users</a></li>
             </ul>
             </li>
           </ul>
