upated extra markup to media page

--- a/app/web/views/media.erb
+++ b/app/web/views/media.erb
@@ -73,6 +73,46 @@
 					<img src="img/mkCamerasPrg.png" width="380px" alt="logo">
 					<p class="imgFile"><a href="">PNG</a></p>
 				</div>
+				<div class="col-sm-6 ">
+					<img src="img/Logo_camerasUleashed_400x110.png" width="380px" alt="logo">
+					<p class="imgFile"><a href="">PNG</a></p>
+					<p class="imgSize">100x60</p>
+				</div>
+			</div>		
+		</div><!-- end row -->
+		<div class="row">
+			<div class="img_container">
+				<div class="col-sm-6 ">
+					<img src="img/Logo_camerasUleashed_400x110.png" width="380px" alt="logo">
+					<p class="imgFile"><a href="">PNG</a></p>
+					<p class="imgSize">250x150</p>
+				</div>
+				<div class="col-sm-6 ">
+					<img src="img/Logo_camerasUleashed_400x110.png" width="380px" alt="logo">
+					<p class="imgFile"><a href="">SVG</a></p>
+				</div>
+			</div>
+		</div><!-- end row -->
+		<div class="row">
+			<div class="img_container">
+				<div class="col-sm-6 ">
+					<img src="img/incrCamFunction_500x125.png" width="380px" alt="logo">
+					<p class="imgFile"><a href="">PNG</a></p>
+					<p class="imgSize">100x60</p>
+				</div>
+				<div class="col-sm-6 ">
+					<img src="img/incrCamFunction_500x125.png" width="380px" alt="logo">
+					<p class="imgFile"><a href="">PNG</a></p>
+					<p class="imgSize">250x150</p>
+				</div>
+			</div>		
+		</div><!-- end row -->
+		<div class="row">
+			<div class="img_container">
+				<div class="col-sm-6 ">
+					<img src="img/incrCamFunction_500x125.png" width="380px" alt="logo">
+					<p class="imgFile"><a href="">SVG</a></p>
+				</div>
 			</div>		
 		</div><!-- end row -->
 	</div><!-- end container -->
