updated markup to footer.erb added extra div for styling

--- a/app/web/views/layouts/_footer.erb
+++ b/app/web/views/layouts/_footer.erb
@@ -19,12 +19,14 @@
           <a href='http://github.com/evercam' target='_blank' class='fa-github'></a>
           </li>
         </ul>
-        <span>
-          <a href='/about'>About Us</a>
-          <a href='/terms'>Terms</a>
-          <a href='/privacy'>Privacy</a>
-          <a href='/jobs'>Jobs</a>
-        </span>
+		<div class="menu_footer">
+			<span>
+			  <a href='/about'>About Us</a>
+			  <a href='/terms'>Terms</a>
+			  <a href='/privacy'>Privacy</a>
+			  <a href='/jobs'>Jobs</a>
+			</span>
+		</div>
       </div>
     </div>
   </div>
