--- a/app/web/views/connect.erb
+++ b/app/web/views/connect.erb
@@ -1,5 +1,5 @@
 	<div class="container">    
-		<div id="connect_container">	
+		<div class="connect_container">	
 			<h3>Please try our App to help scan your <br/>network and get your cameras connected.</h3>
 			<a href="https://play.google.com/store/apps/details?id=com.evercamdiscover&hl=en"><img src="img/googleplay.png"></a>
 			<h3>More Coming Soon...</h3>
