--- a/app/web/views/layouts/_header.erb
+++ b/app/web/views/layouts/_header.erb
@@ -10,7 +10,7 @@
           </h1>
           <ul class='nav tm-navbar navbar-nav sf-menu'>
             <li class='hidden-sm'><a href='/'>Home</a></li>
-            <li><a href='#'>Connect</a></li>
+            <li><a href='/connect'>Connect</a></li>
             <li><a href='/docs'>Develop</a></li>
             <li><a href='#'>Marketplace</a></li>
             <li><a href='/login'>Sign In</a></li>
