reimplemented POST /interested action with specs

--- a/app/web/views/index.erb
+++ b/app/web/views/index.erb
@@ -5,11 +5,13 @@
     <h4>We make it simple to control, manage and interact with IP cameras through a developer friendly RESTful interface</h4>
 
     <br />
-    <form method="POST" action="/register">
+
+    <form method="POST" action="/interested">
       <h3>Interested? Sign Up Today&hellip;</h3>
       <input id="email" type="email" name="email" placeholder="Your email" required>
       <input id="signup" type="submit" value="Sign up">
     </form>
+
     <br />
 
     <h4>Take advantage of our marketplace apps and add amazing new functionality to your camera streams in seconds&hellip;</h4>
