added intercom.io script to _head.erb partial

--- a/app/web/views/layouts/_head.erb
+++ b/app/web/views/layouts/_head.erb
@@ -15,3 +15,14 @@
 <script src='//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js'></script>
 <script src='//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js'></script>
 
+<% if curr_user %>
+  <script id="IntercomSettingsScriptTag">
+    window.intercomSettings = {
+      email: "<%= curr_user.email %>",
+      created_at: <%= curr_user.created_at.to_i %>,
+      app_id: "4c5bd9d1a56b7dbf94047fc497d28345a8944d21"
+    };
+  </script>
+  <script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://static.intercomcdn.com/intercom.v1.js';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}};})()</script>
+<% end %>
+
