cleaned lib requires and commented app init files

--- a/app/web/views/errors/400.erb
+++ b/app/web/views/errors/400.erb
@@ -5,7 +5,7 @@
   Uh Oh! It looks like something went wrong with your last request. Hopefully this error message will help you out.
   </p>
   <div class='alert alert-danger'>
-    <%= @message %>
+    <%= @error.message %>
   </div>
 </div>
 
