--- a/app/web/public/css/template.bootstrap.css
+++ b/app/web/public/css/template.bootstrap.css
@@ -1815,4 +1815,240 @@ footer span a:hover {
   color: #798a9c;
   height: 1em;
 }
+/*************** FOR Marketplace.HTML *****************/
 
+.app_container{
+	text-align: center;	
+	margin-bottom: 40px;
+	vertical-align:bottom;
+	overflow: hidden;
+}
+
+.app_container .col-md-4{
+	margin-bottom: 40px;
+}
+
+.app_container p{
+	font-size: 16px;
+}
+
+.app_container h4{
+	padding-top: 10px;
+}
+
+.app_container i{
+	font-size: 6.5em;
+}
+
+.form_container{
+	padding: 10px 0px 20px 0px;
+	margin-top: 10px;
+	/*border: 1px solid #dddbdb;*/
+	-webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+	text-align: center;
+	background: #f7f7f7;
+	font-size: 25px;
+}
+
+.form_container h1{
+	font-size: 33px;
+	padding-bottom: 30px;
+}
+
+.form-horizontal{
+	margin: auto;
+}
+
+#inputEmail3{
+	border: 1px solid #EB5F53;
+    border-radius: 5px;
+    color: #373D4D;
+    font-size: 24px;
+    height: 60px;
+    margin-right: 20px;
+    padding: 10px 20px;
+    vertical-align: top;
+    width: 440px;
+}
+
+#inputWhat{
+	border: 1px solid #EB5F53;
+    border-radius: 5px;
+    color: #373D4D;
+    font-size: 24px;
+	height: 180px;
+    max-height: 250px;
+	max-width: 440px;
+    margin-right: 20px;
+    padding: 10px 20px;
+    vertical-align: top;
+    width: 440px;
+}
+
+#inputHow{
+	border: 1px solid #EB5F53;
+    border-radius: 5px;
+    color: #373D4D;
+    font-size: 24px;
+    height: 60px;
+    margin-right: 20px;
+    padding: 5px 10px;
+    vertical-align: top;
+    width: 440px;
+}
+
+#submit{
+    background: none repeat scroll 0 0 #EB5F53;
+    border: 0 none;
+    border-radius: 5px;
+    color: #FFFFFF;
+    display: inline-block;
+    font-size: 24px;
+    font-weight: 800;
+    height: 60px;
+    line-height: 45px;
+    padding: 0;
+    text-transform: uppercase;
+    width: 230px;
+}
+
+.form-group{
+	margin-bottom: 20px;
+}
+
+.btn{
+	margin-top: 0px;
+}
+
+.form-horizontal .control-label, 
+.form-horizontal .radio, 
+.form-horizontal .checkbox, 
+.form-horizontal .radio-inline, 
+.form-horizontal .checkbox-inline{
+	padding-top: 10px;
+}
+
+.block-3{
+	padding-bottom: 70px;
+}
+
+/*************** FOR Marketplace.HTML *****************/
+
+.app_container{
+	text-align: center;	
+	margin-bottom: 40px;
+	vertical-align:bottom;
+	overflow: hidden;
+}
+
+.app_container .col-md-4{
+	margin-bottom: 40px;
+}
+
+.app_container p{
+	font-size: 16px;
+}
+
+.app_container h4{
+	padding-top: 10px;
+}
+
+.app_container i{
+	font-size: 6.5em;
+}
+
+.form_container{
+	padding: 10px 0px 20px 0px;
+	margin-top: 10px;
+	/*border: 1px solid #dddbdb;*/
+	-webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+	text-align: center;
+	background: #f7f7f7;
+	font-size: 25px;
+}
+
+.form_container h1{
+	font-size: 33px;
+	padding-bottom: 30px;
+}
+
+.form-horizontal{
+	margin: auto;
+}
+
+#inputEmail3{
+	border: 1px solid #EB5F53;
+    border-radius: 5px;
+    color: #373D4D;
+    font-size: 24px;
+    height: 60px;
+    margin-right: 20px;
+    padding: 10px 20px;
+    vertical-align: top;
+    width: 440px;
+}
+
+#inputWhat{
+	border: 1px solid #EB5F53;
+    border-radius: 5px;
+    color: #373D4D;
+    font-size: 24px;
+	height: 180px;
+    max-height: 250px;
+	max-width: 440px;
+    margin-right: 20px;
+    padding: 10px 20px;
+    vertical-align: top;
+    width: 440px;
+}
+
+#inputHow{
+	border: 1px solid #EB5F53;
+    border-radius: 5px;
+    color: #373D4D;
+    font-size: 24px;
+    height: 60px;
+    margin-right: 20px;
+    padding: 5px 10px;
+    vertical-align: top;
+    width: 440px;
+}
+
+#submit{
+    background: none repeat scroll 0 0 #EB5F53;
+    border: 0 none;
+    border-radius: 5px;
+    color: #FFFFFF;
+    display: inline-block;
+    font-size: 24px;
+    font-weight: 800;
+    height: 60px;
+    line-height: 45px;
+    padding: 0;
+    text-transform: uppercase;
+    width: 230px;
+}
+
+.form-group{
+	margin-bottom: 20px;
+}
+
+.btn{
+	margin-top: 0px;
+}
+
+.form-horizontal .control-label, 
+.form-horizontal .radio, 
+.form-horizontal .checkbox, 
+.form-horizontal .radio-inline, 
+.form-horizontal .checkbox-inline{
+	padding-top: 10px;
+}
+
+.block-3{
+	padding-bottom: 70px;
+}
