--- a/app/web/public/css/template.bootstrap.css
+++ b/app/web/public/css/template.bootstrap.css
@@ -2078,6 +2078,21 @@ footer span a:hover {
 	font-size: 6.5em;
 }
 
+.app_container .btn{
+    background: none repeat scroll 0 0 #EB5F53;
+    border: medium none;
+    border-radius: 4px;
+    box-shadow: none;
+    color: #FFFFFF;
+    font-family: 'Roboto',sans-serif;
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 1em;
+    margin-top: 25px;
+    padding: 10px 23px 11px;
+    text-transform: uppercase;
+}
+
 .form_container{
 	padding: 10px 0px 20px 0px;
 	margin-top: 10px;
