added markup for i icon

--- a/app/web/views/marketplace.erb
+++ b/app/web/views/marketplace.erb
@@ -5,7 +5,7 @@
 					<div class="row block-3">
 						<div class="col-sm-4 ">
 
-								<a href="#" class="iconhover"><i class="fa-clock-o icon-5x icon-align-center"></i></a>
+								<a href="#" class="iconhover"><i class="fa fa-clock-o icon-5x icon-align-center"></i></a>
 								<h4>Timelapse</h4>
 								<p>Create timelapse videos using image sequences captured by your camera.</p>
 								<p><a class="btn btn-default" href="#">Coming Soon &raquo;</a></p>
