added padding to bottom of marketplace page

--- a/app/web/public/css/template.bootstrap.css
+++ b/app/web/public/css/template.bootstrap.css
@@ -2055,6 +2055,10 @@ footer span a:hover {
 
 /*************** FOR Marketplace.HTML *****************/
 
+.marketplace_cont{
+	padding-bottom: 80px;
+}
+
 .app_container{
 	text-align: center;	
 	margin-bottom: 40px;
