added addir=tional style to marketplace

--- a/app/web/public/css/template.bootstrap.css
+++ b/app/web/public/css/template.bootstrap.css
@@ -2056,7 +2056,7 @@ footer span a:hover {
 /*************** FOR Marketplace.HTML *****************/
 
 .marketplace_cont{
-	padding-bottom: 80px;
+	margin-bottom: 80px;
 }
 
 .app_container{
