--- a/app/web/views/signup.erb
+++ b/app/web/views/signup.erb
@@ -6,35 +6,28 @@
       <div class="form-inline">
         <div class="form-group col-xs-6">
           <label for="forename">Forename</label>
-          <input class="form-control" name="forename" placeholder="Forename" type="text"></input>
+          <%= input(:forename, :text, :required, placeholder: 'Forename') %>
         </div>
         <div class="form-group col-xs-6">
           <label for="lastname">Lastname</label>
-          <input class="form-control" name="lastname" placeholder="Lastname" type="text"></input>
+          <%= input(:lastname, :text, :required, placeholder: 'Lastname') %>
         </div>
       </div>
     </div>
 
     <div class="form-group">
       <label for="country">Country</label>
-      <select class="form-control">
-        <option></option>
-        <% @countries.each do |country| %>
-          <option value="<%= country.pk %>">
-          <%= country.name %>
-          </option>
-        <% end %>
-      </select>
+      <%= select(:country, @countries.map { |c| [c.iso3166_a2, c.name] }, :required) %>
     </div>
 
     <div class="form-group">
       <label for="username">Username</label>
-      <input class="form-control" name="username" placeholder="Username" type="text"></input>
+      <%= input(:username, :text, :required, placeholder: 'Username') %>
     </div>
 
     <div class="form-group">
       <label for="email">Email</label>
-      <input class="form-control" name="email" placeholder="Email" type="text"></input>
+      <%= input(:email, :text, :required, placeholder: 'Email') %>
     </div>
 
     <input class="btn btn-primary pull-right" type="submit" value="Sign up"></input>
