--- a/app/web/views/media.erb
+++ b/app/web/views/media.erb
@@ -113,6 +113,24 @@
 					<img src="img/incrCamFunction_500x125.png" width="380px" alt="logo">
 					<p class="imgFile"><a href="">SVG</a></p>
 				</div>
+			</div>	
+			<div class="col-sm-6 ">
+				<img src="img/App_icon_mediaPage.png" width="90px" alt="logo">
+				<p class="imgFile"><a href="">PNG</a></p>
+				<p class="imgSize">512x512</p>
+			</div>			
+		</div><!-- end row -->
+		<div class="row">
+			<div class="img_container">
+				<div class="col-sm-6 ">
+					<img src="img/App_icon_mediaPage.png" width="90px" alt="logo">
+					<p class="imgFile"><a href="">PNG</a></p>
+					<p class="imgSize">192x192</p>
+				</div>
+				<div class="col-sm-6 ">
+					<img src="img/App_icon_mediaPage.png" width="90px" alt="logo">
+					<p class="imgFile"><a href="">SVG</a></p>
+				</div>
 			</div>		
 		</div><!-- end row -->
 	</div><!-- end container -->
