--- a/app/web/public/css/template.bootstrap.css
+++ b/app/web/public/css/template.bootstrap.css
@@ -1870,7 +1870,7 @@ footer span a:hover {
     margin-right: 20px;
     padding: 10px 20px;
     vertical-align: top;
-    width: 440px;
+    width: 90%;
 }
 
 #inputWhat{
@@ -1880,11 +1880,11 @@ footer span a:hover {
     font-size: 24px;
 	height: 180px;
     max-height: 250px;
-	max-width: 440px;
+	max-width: 90%;
     margin-right: 20px;
     padding: 10px 20px;
     vertical-align: top;
-    width: 440px;
+    width: 90%;
 }
 
 #inputHow{
